# ChatServer

./: ChangeLog.md  ChatServer.cabal  ChatServer.cabal.save0  LICENSE  Main.hs  README.md  cabal.sandbox.config  start.sh
.cabal-sandbox/: world
.cabal-sandbox/x86_64-windows-ghc-8.2.1-packages.conf.d/: network-2.6.3.2-N4O3tHnIF53aUjogAgmsr.conf  package.cache
.cabal-sandbox/x86_64-windows-ghc-8.2.1/network-2.6.3.2-N4O3tHnIF53aUjogAgmsr/: Network.hi
.cabal-sandbox/x86_64-windows-ghc-8.2.1/network-2.6.3.2-N4O3tHnIF53aUjogAgmsr/Network/: BSD.hi  Socket.hi
.cabal-sandbox/x86_64-windows-ghc-8.2.1/network-2.6.3.2-N4O3tHnIF53aUjogAgmsr/Network/Socket/: ByteString.hi  Internal.hi  Types.hi
.cabal-sandbox/x86_64-windows-ghc-8.2.1/network-2.6.3.2-N4O3tHnIF53aUjogAgmsr/Network/Socket/ByteString/: Internal.hi  Lazy.hi
.cabal-sandbox/x86_64-windows-ghc-8.2.1/network-2.6.3.2-N4O3tHnIF53aUjogAgmsr/Network/Socket/ByteString/Lazy/: Windows.hi
