name:                 ChatServer
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               mcdonndi
maintainer:           mcdonndi@tcd.ie
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable ChatServer
  hs-source-dirs:       .
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base, network
  default-language:     Haskell2010
